Main UI
- Support for viewing read lists and collections

Reader UI
- Added a vertical separator for page numbers in the seek bar

Build
- Updated website

Fixes
- Fixed logout button stuck in offline mode